--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,29 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.2.6",
+    "@ai-sdk/react": "^1.1.24",
+    "@mantine/core": "^7.17.2",
+    "@mantine/dates": "^7.17.2",
+    "@mantine/form": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
+    "@mantine/modals": "^7.17.2",
+    "@mantine/notifications": "^7.17.2",
     "@repo/ui": "*",
+    "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query-devtools": "^5.69.0",
+    "ai": "^4.1.63",
+    "date-fns": "^4.1.0",
+    "immer": "^10.1.1",
+    "mantine-form-zod-resolver": "^1.1.0",
     "next": "^15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
