--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.69.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^4.1.63",
     "date-fns": "^4.1.0",
     "immer": "^10.1.1",
