feat: add warehouse app with dependencies and scripts for database management

--- a/apps/warehouse/package.json
+++ b/apps/warehouse/package.json
@@ -8,13 +8,36 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate",
+    "seed": "bun run seed.ts",
+    "reset": "bun run reset.ts",
+    "studio": "drizzle-kit studio --port=5183"
   },
   "dependencies": {
-    "@repo/ui": "*"
+    "@google-cloud/bigquery": "^7.9.3",
+    "@hono/zod-openapi": "^0.19.2",
+    "@hono/zod-validator": "^0.4.3",
+    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@repo/ui": "*",
+    "drizzle-orm": "^0.40.1",
+    "drizzle-seed": "^0.3.1",
+    "drizzle-zod": "^0.7.0",
+    "es-toolkit": "^1.33.0",
+    "mysql2": "^3.14.0",
+    "oracledb": "^6.8.0",
+    "pg": "^8.14.1",
+    "postgres": "^3.4.5",
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*"
+    "@repo/typescript-config": "*",
+    "@types/oracledb": "^6.5.3",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.5"
   }
 }
