--- a/apps/warehouse/package.json
+++ b/apps/warehouse/package.json
@@ -29,6 +29,8 @@
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
     "pg": "^8.14.1",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
     "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.4"
