--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "shared",
+  "name": "@meside/shared",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "dev": "echo 'Add dev script here'",
-    "build": "echo 'Add build script here'",
-    "test": "echo 'Add test script here'",
-    "lint": "echo 'Add lint script here'"
+  "exports": {
+    "./*": "./src/*.ts"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
