--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,7 +34,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "@meside/shared": "*"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
